--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "actioncable-vue": "^2.5.0",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7"
   },
