--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "actioncable-vue": "^2.5.0",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "@nuxtjs/axios": "^5.12.5",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.2.0",
