--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "test": "jest"
+    "test": "jest",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.12.5",
+    "@nuxtjs/dotenv": "^1.4.1",
     "actioncable-vue": "^2.5.0",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7",
-    "@nuxtjs/axios": "^5.12.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nuxt": "^2.15.7"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.2.0",
