--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "actioncable-vue": "^2.5.0",
     "core-js": "^3.15.1",
     "express": "^4.17.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.2.0",
